terraform/modules/security-group/main.tf
resource "aws_security_group" "quiz_app_sg" {
  name        = "quiz-app-security-group"
  description = "Security group for Quiz Application"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name      = var.instance_name
    Project   = "simple-quiz-devops"
    ManagedBy = "Terraform"
  }
}
